webapp: fix z-index of tool window
was showing behind status bar

--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -8,7 +8,7 @@
     overflow: hidden;
     position: fixed;
     top: 40px;
-    z-index: 1030;
+    z-index: 999;
     padding-top: 2px;
     padding-bottom: 2px;
     background: white;
