--- a/webapp/src/app/trade/trade.component.scss
+++ b/webapp/src/app/trade/trade.component.scss
@@ -17,7 +17,7 @@
 .input-group-prepend {
     .form-control {
         border-top-right-radius: 0;
-        z-index: 1029;
+        z-index: 998;
         border-bottom-right-radius: 0;
     }
 }
